feat(fixtures): add enforcement metadata to test plan
- Add dependency_checks: Python 3.8+ version validation
- Add test_commands: Syntax validation and output verification
- Task 1: Validates file syntax and correct output
- Task 2: Validates file syntax and both output messages
- Enables [Enforcement] and [Runtime] logging during execution

--- a/test/integration/fixtures/simple-plan.yaml
+++ b/test/integration/fixtures/simple-plan.yaml
@@ -29,7 +29,54 @@ plan:
       success_criteria:
         - "File main.py created with valid Python code"
         - "Script prints 'Hello from Task 1' when executed"
-      status: "pending"
+      dependency_checks:
+        - name: "Python 3.8+"
+          command: "python3 --version"
+      test_commands:
+        - "python3 -m py_compile main.py"
+        - "python3 main.py | grep 'Hello from Task 1'"
+      status: "completed"
+      execution_history:
+        - attempt_number: "1"
+          agent: python-pro
+          verdict: RED
+          agent_output: |
+            {"type":"result","subtype":"success","is_error":false,"duration_ms":22968,"duration_api_ms":42192,"num_turns":8,"result":"","session_id":"be65334d-0823-4733-a109-b6739f1df581","total_cost_usd":0.07268039999999999,"usage":{"input_tokens":40,"cache_creation_input_tokens":9991,"cache_read_input_tokens":314259,"output_tokens":844,"server_tool_use":{"web_search_requests":0,"web_fetch_requests":0},"service_tier":"standard","cache_creation":{"ephemeral_1h_input_tokens":0,"ephemeral_5m_input_tokens":9991}},"modelUsage":{"claude-haiku-4-5-20251001":{"inputTokens":7622,"outputTokens":1628,"cacheReadInputTokens":314259,"cacheCreationInputTokens":20394,"webSearchRequests":0,"costUSD":0.07268039999999999,"contextWindow":200000}},"permission_denials":[],"structured_output":{"status":"success","summary":"Created main.py with minimal Python entry point","output":"File created: /Users/harrison/Github/conductor/main.py\nExecution test passed: prints \"Hello, World!\"","files_modified":["main.py"]},"uuid":"7c4c756b-e271-44c1-b4f2-c0d468b7ca7f"}
+          qc_feedback: |-
+            [code-reviewer] File main.py exists and executes, but fails SUCCESS CRITERIA #1: Script prints 'Hello from Task 1' when executed. Current output: 'Hello, World!' instead of required 'Hello from Task 1'. Also missing Python-specific best practices (type hints on main function).
+            [python-pro] File main.py created successfully at correct path with valid Python code. However, success criterion #1 failed: script prints 'Hello, World!' instead of required 'Hello from Task 1'. File path is correct, syntax is valid, but output message does not match specification.
+            [quality-control] File main.py created at correct path with valid Python code structure. However, output mismatch on success criterion #1: script prints 'Hello, World!' but criterion requires 'Hello from Task 1'. File exists and is executable, but functional requirement not met.
+          timestamp: "2025-12-03T10:55:28Z"
+        - attempt_number: "2"
+          agent: python-pro
+          verdict: RED
+          agent_output: |
+            {"type":"result","subtype":"success","is_error":false,"duration_ms":13088,"duration_api_ms":23470,"num_turns":5,"result":"","session_id":"e2fc67bc-c479-4eaa-b115-841cd89908a4","total_cost_usd":0.0371891,"usage":{"input_tokens":26,"cache_creation_input_tokens":8216,"cache_read_input_tokens":188126,"output_tokens":560,"server_tool_use":{"web_search_requests":0,"web_fetch_requests":0},"service_tier":"standard","cache_creation":{"ephemeral_1h_input_tokens":0,"ephemeral_5m_input_tokens":8216}},"modelUsage":{"claude-haiku-4-5-20251001":{"inputTokens":1230,"outputTokens":1167,"cacheReadInputTokens":198541,"cacheCreationInputTokens":8216,"webSearchRequests":0,"costUSD":0.0371891,"contextWindow":200000}},"permission_denials":[],"structured_output":{"status":"success","summary":"Fixed main.py to print required output and added type hints","output":"Script executes and prints 'Hello from Task 1' with proper type annotations","files_modified":["main.py"],"errors":[]},"uuid":"44d3407f-1e84-4f49-a7d9-09856ec1e83c"}
+          qc_feedback: |-
+            [code-reviewer] Agent code-reviewer failed: JSON schema enforcement failed: invalid character 'P' looking for beginning of value
+            [python-pro] Agent python-pro failed: JSON schema enforcement failed: invalid character 'â' looking for beginning of value
+            [quality-control] Agent quality-control failed: JSON schema enforcement failed: invalid character 'P' looking for beginning of value
+          timestamp: "2025-12-03T10:55:55Z"
+        - attempt_number: "3"
+          agent: general-purpose
+          verdict: GREEN
+          agent_output: |
+            {"type":"result","subtype":"success","is_error":false,"duration_ms":11010,"duration_api_ms":27221,"num_turns":4,"result":"","session_id":"ad3d9ecc-fe27-443b-8f5a-09afd1165998","total_cost_usd":0.0693126,"usage":{"input_tokens":21,"cache_creation_input_tokens":39456,"cache_read_input_tokens":117061,"output_tokens":454,"server_tool_use":{"web_search_requests":0,"web_fetch_requests":0},"service_tier":"standard","cache_creation":{"ephemeral_1h_input_tokens":0,"ephemeral_5m_input_tokens":39456}},"modelUsage":{"claude-haiku-4-5-20251001":{"inputTokens":1225,"outputTokens":1204,"cacheReadInputTokens":127476,"cacheCreationInputTokens":39456,"webSearchRequests":0,"costUSD":0.0693126,"contextWindow":200000}},"permission_denials":[],"structured_output":{"status":"success","summary":"Task 1 completed successfully. File main.py exists with correct output 'Hello from Task 1' and proper Python structure.","output":"Script executed successfully, printing: Hello from Task 1","errors":[],"files_modified":["main.py"]},"uuid":"fb87a12f-a928-4011-bb00-cfeda6267a52"}
+          qc_feedback: |-
+            [quality-control] Agent quality-control failed: JSON schema enforcement failed: invalid character 'P' looking for beginning of value
+            [python-pro] Task completed successfully. File main.py created with valid Python code including proper shebang, docstring, type-hinted main function, and correct output. Script executes and prints exactly 'Hello from Task 1' as required. All success criteria met.
+          timestamp: "2025-12-03T10:56:26Z"
+        - attempt_number: "1"
+          agent: headless
+          verdict: GREEN
+          agent_output: |
+            {"type":"result","subtype":"success","is_error":false,"duration_ms":24085,"duration_api_ms":42394,"num_turns":10,"result":"","session_id":"4d055270-9d19-4ecd-b5f8-a503a63c0c81","total_cost_usd":0.10355315000000004,"usage":{"input_tokens":46,"cache_creation_input_tokens":41125,"cache_read_input_tokens":358884,"output_tokens":1023,"server_tool_use":{"web_search_requests":0,"web_fetch_requests":0},"service_tier":"standard","cache_creation":{"ephemeral_1h_input_tokens":0,"ephemeral_5m_input_tokens":41125}},"modelUsage":{"claude-haiku-4-5-20251001":{"inputTokens":6297,"outputTokens":1784,"cacheReadInputTokens":369299,"cacheCreationInputTokens":41125,"webSearchRequests":0,"costUSD":0.10355315000000004,"contextWindow":200000}},"permission_denials":[],"structured_output":{"status":"success","summary":"Fixed permissions on main.py and verified execution. File contains main() and second_task() functions with correct Python 3 shebang.","output":"Hello from Task 1\\nHello from Task 2","files_modified":["main.py"],"errors":[]},"uuid":"a7c856ef-f525-4824-95a1-e9d7635b8a85"}
+          qc_feedback: |-
+            [code-reviewer] File main.py successfully created at required path with valid Python code. All success criteria verified: (1) File contains valid Python with proper type hints and structure, (2) Script executes and prints 'Hello from Task 1' as required. Code follows Python best practices with type hints (-> None), no mutable defaults, and proper main/function separation."
+            [python-pro] Task 1 completed successfully. Agent created main.py at correct path with valid Python code following best practices: type hints on function signatures, proper shebang, docstrings, no mutable defaults, and correct execution output matching all success criteria.
+            [qa-expert] All success criteria met. File exists at correct path with valid Python code including type hints, proper shebang, no bare except blocks, and correct execution output.
+          timestamp: "2025-12-03T10:58:19Z"
+      completed_date: "2025-12-03"
     - task_number: 2
       type: component
       name: "Second Task"
@@ -52,3 +99,23 @@ plan:
       success_criteria:
         - "File main.py modified correctly"
         - "Script prints both messages in correct order"
+      dependency_checks:
+        - name: "Python 3.8+"
+          command: "python3 --version"
+      test_commands:
+        - "python3 -m py_compile main.py"
+        - "python3 main.py | grep 'Hello from Task 1' && python3 main.py | grep 'Hello from Task 2'"
+      status: "completed"
+      execution_history:
+        - attempt_number: "1"
+          agent: python-pro
+          verdict: GREEN
+          agent_output: |
+            {"type":"result","subtype":"success","is_error":false,"duration_ms":14690,"duration_api_ms":25542,"num_turns":5,"result":"","session_id":"ec137a45-26be-4bf9-bd15-f8ff2c3af819","total_cost_usd":0.07375615,"usage":{"input_tokens":26,"cache_creation_input_tokens":39963,"cache_read_input_tokens":157089,"output_tokens":631,"server_tool_use":{"web_search_requests":0,"web_fetch_requests":0},"service_tier":"standard","cache_creation":{"ephemeral_1h_input_tokens":0,"ephemeral_5m_input_tokens":39963}},"modelUsage":{"claude-haiku-4-5-20251001":{"inputTokens":1247,"outputTokens":1161,"cacheReadInputTokens":167504,"cacheCreationInputTokens":39963,"webSearchRequests":0,"costUSD":0.07375615,"contextWindow":200000}},"permission_denials":[],"structured_output":{"status":"success","summary":"Task 2 integration complete. Enhanced second_task() function to integrate properly with Task 1.","output":"Task 2 successfully integrated with Task 1. The second_task() function now prints integration confirmation message after Task 2 output.","files_modified":["main.py"],"errors":[]},"uuid":"a797d903-9c0e-4aaf-bd26-40d1a89f7558"}
+          qc_feedback: |-
+            [code-reviewer] Agent code-reviewer failed: JSON schema enforcement failed: invalid character '#' looking for beginning of value
+            [python-pro] Task 2 is fully implemented and properly integrated with Task 1. The second_task() function is correctly called from main(), prints the expected output messages in the correct sequence, and follows Python best practices with proper type hints. No issues found.
+            [quality-control] Agent quality-control failed: JSON schema enforcement failed: invalid character 'N' looking for beginning of value
+            [backend-developer] Agent backend-developer failed: JSON schema enforcement failed: invalid character 'P' looking for beginning of value
+          timestamp: "2025-12-03T10:59:00Z"
+      completed_date: "2025-12-03"
