feat(tts): add optional Orpheus TTS voice announcements
- Add internal/tts package with Client, Announcer, and TTSLogger
- Client: lazy health check with sync.Once, fire-and-forget Speak()
- Announcer: generates messages for wave start/complete, QC failures, run complete
- TTSLogger: implements executor.Logger interface
- Wire TTS into run.go multiLogger (conditional on enabled + available)

TTS gracefully degrades: silent no-op when disabled or server unavailable.

--- a/.conductor/config.yaml
+++ b/.conductor/config.yaml
@@ -180,3 +180,23 @@ executor:
   # classification. Falls back to regex patterns on timeout/error/low confidence.
   # Confidence threshold: 0.85 minimum (filters low-quality classifications)
   enable_claude_classification: true
+
+# Text-to-Speech (TTS) configuration (v2.10+)
+# Enables voice feedback for task completion events
+tts:
+  # Enable/disable TTS functionality (default: false)
+  # When false, no TTS requests are made - zero behavior change from pre-TTS
+  enabled: true
+
+  # TTS server endpoint URL - local Orpheus server
+  base_url: "http://localhost:5005"
+
+  # TTS model to use for speech synthesis
+  model: "orpheus"
+
+  # Voice to use for speech synthesis
+  # Orpheus voices: tara, leah, jess, leo, dan, mia, zac, zoe
+  voice: "tara"
+
+  # Maximum time to wait for TTS health check (default: 2s)
+  timeout: 2s
