--- a/.conductor/config.yaml
+++ b/.conductor/config.yaml
@@ -198,5 +198,7 @@ tts:
   # Orpheus voices: tara, leah, jess, leo, dan, mia, zac, zoe
   voice: "tara"
 
-  # Maximum time to wait for TTS health check (default: 2s)
-  timeout: 2s
+  # Maximum time to wait for TTS requests (default: 30s)
+  # This timeout applies to both health checks and speech synthesis
+  # Increase if using longer phrases or slower TTS server
+  timeout: 30s
