docs: add RFC 2119 requirement level mapping to QC documentation
Document how Conductor's existing hard gate/soft signal structure
maps to RFC 2119 requirement levels (MUST/SHOULD/MAY). No code
changes required - the existing test_commands (hard gate) and
success_criteria (soft signal) already implement these semantics.

- test_commands, dependency_checks → MUST (blocks on failure)
- success_criteria, integration_criteria → SHOULD (QC reviews)
- documentation_targets → MAY (informational only)

Also documents optional text prefixes (e.g., "MUST: criterion")
for explicit severity signaling to QC agents.

--- a/.conductor/config.yaml
+++ b/.conductor/config.yaml
@@ -186,7 +186,7 @@ executor:
 tts:
   # Enable/disable TTS functionality (default: false)
   # When false, no TTS requests are made - zero behavior change from pre-TTS
-  enabled: true
+  enabled: false
 
   # TTS server endpoint URL - local Orpheus server
   base_url: "http://localhost:5005"
