fix(agent): filter out Claude CLI EOPNOTSUPP file watcher noise

--- a/test-guard.yaml
+++ b/test-guard.yaml
@@ -16,7 +16,18 @@ plan:
       success_criteria:
         - "Outputs a one-sentence summary"
         - "Mentions multi-agent orchestration"
-      status: "failed"
+      status: "completed"
+      execution_history:
+        - attempt_number: "1"
+          agent: typescript-pro
+          verdict: GREEN
+          agent_output: '{"errors":[],"files_modified":[],"output":"Conductor is an autonomous multi-agent orchestration CLI that executes implementation plans by spawning and managing multiple Claude Code CLI agents in coordinated waves, parsing Markdown/YAML plans, calculating dependencies, and managing quality control reviews with automatic retries.","status":"success","summary":"Read README.md and summarized what Conductor does"}'
+          qc_feedback: |-
+            [code-reviewer] Task successfully completed. The agent read the README.md file and provided a one-sentence summary that accurately describes Conductor as a multi-agent orchestration CLI.
+            [technical-writer] Agent successfully completed the task. It read README.md and produced a one-sentence summary that accurately describes Conductor as an autonomous multi-agent orchestration CLI. The summary mentions all key aspects: multi-agent orchestration, execution of implementation plans, Claude Code CLI agents, wave-based coordination, Markdown/YAML parsing, dependency calculation, and quality control with retries.
+            [docs-architect] Task successfully completed. The agent read README.md and provided a one-sentence summary that accurately describes Conductor as a multi-agent orchestration CLI. Both success criteria are satisfied.
+          timestamp: "2025-12-21T14:33:29Z"
+      completed_date: "2025-12-21"
     - task_number: 2
       type: component
       name: "Code exploration"
@@ -28,6 +39,7 @@ plan:
       success_criteria:
         - "Lists block, warn, and adaptive modes"
         - "Explains what each mode does"
+      status: "in-progress"
     - task_number: 3
       type: component
       name: "Configuration check"
