feat(tts): announce all GUARD risk levels including low

--- a/test-guard.yaml
+++ b/test-guard.yaml
@@ -19,14 +19,14 @@ plan:
       status: "completed"
       execution_history:
         - attempt_number: "1"
-          agent: typescript-pro
+          agent: python-pro
           verdict: GREEN
-          agent_output: '{"errors":[],"files_modified":[],"output":"Conductor is an autonomous multi-agent orchestration CLI that executes implementation plans by spawning and managing multiple Claude Code CLI agents in coordinated waves, parsing Markdown/YAML plans, calculating dependencies, and managing quality control reviews with automatic retries.","status":"success","summary":"Read README.md and summarized what Conductor does"}'
+          agent_output: '{"errors":[],"files_modified":[],"output":"Conductor is an autonomous multi-agent orchestration CLI that executes implementation plans by spawning and managing multiple Claude Code agents in parallel waves, handling dependency resolution, quality control reviews with automatic retries, and adaptive learning from execution history.","status":"success","summary":"Read README.md and summarized Conductor''s purpose"}'
           qc_feedback: |-
-            [code-reviewer] Task successfully completed. The agent read the README.md file and provided a one-sentence summary that accurately describes Conductor as a multi-agent orchestration CLI.
-            [technical-writer] Agent successfully completed the task. It read README.md and produced a one-sentence summary that accurately describes Conductor as an autonomous multi-agent orchestration CLI. The summary mentions all key aspects: multi-agent orchestration, execution of implementation plans, Claude Code CLI agents, wave-based coordination, Markdown/YAML parsing, dependency calculation, and quality control with retries.
-            [docs-architect] Task successfully completed. The agent read README.md and provided a one-sentence summary that accurately describes Conductor as a multi-agent orchestration CLI. Both success criteria are satisfied.
-          timestamp: "2025-12-21T14:33:29Z"
+            [code-reviewer] Task completed successfully. The agent read README.md and produced a clear one-sentence summary that accurately describes Conductor as a multi-agent orchestration CLI with dependency resolution, QC reviews, and adaptive learning.
+            [python-pro] Task successfully completed. The agent read the README.md file and produced a one-sentence summary that accurately describes Conductor as a multi-agent orchestration CLI. Both success criteria are satisfied.
+            [technical-writer] Agent successfully read README.md and produced a one-sentence summary that accurately describes Conductor. The summary correctly identifies Conductor as a "multi-agent orchestration CLI" and covers key features including parallel wave execution, dependency resolution, quality control reviews with retries, and adaptive learning. Both success criteria are satisfied.
+          timestamp: "2025-12-21T14:35:42Z"
       completed_date: "2025-12-21"
     - task_number: 2
       type: component
@@ -39,7 +39,6 @@ plan:
       success_criteria:
         - "Lists block, warn, and adaptive modes"
         - "Explains what each mode does"
-      status: "in-progress"
     - task_number: 3
       type: component
       name: "Configuration check"
@@ -51,3 +50,4 @@ plan:
       success_criteria:
         - "Confirms guard.enabled is true"
         - "Reports current mode setting"
+      status: "in-progress"
