style: fix gofmt formatting issues

--- a/test-guard.yaml
+++ b/test-guard.yaml
@@ -39,6 +39,18 @@ plan:
       success_criteria:
         - "Lists block, warn, and adaptive modes"
         - "Explains what each mode does"
+      status: "completed"
+      execution_history:
+        - attempt_number: "1"
+          agent: python-pro
+          verdict: GREEN
+          agent_output: '{"errors":[],"files_modified":[],"output":"The three GUARD modes available in internal/executor/guard.go are:\n\n1. **block** (GuardModeBlock): Blocks tasks when prediction exceeds threshold. Hard gate that fails tasks with high failure probability.\n\n2. **warn** (GuardModeWarn): Logs warnings but never blocks execution. Soft signal that allows tasks to proceed regardless of prediction.\n\n3. **adaptive** (GuardModeAdaptive): Smart gate that blocks only when BOTH probability AND confidence thresholds are exceeded. Requires both high failure probability and high confidence in the prediction to block.\n\nThese modes are defined as constants at lines 16-25 of guard.go.","status":"success","summary":"Successfully read guard.go and identified the three GUARD modes"}'
+          qc_feedback: |-
+            [code-reviewer] Agent successfully read the guard.go file and correctly identified all three GUARD modes with accurate explanations. The output matches the source code at lines 16-25: block (hard gate blocking tasks), warn (soft signal allowing execution), and adaptive (smart gate requiring both probability AND confidence thresholds).
+            [golang-pro] Task successfully completed. The agent correctly read guard.go and accurately identified and explained all three GUARD modes: block (hard gate that fails tasks with high failure probability), warn (soft signal that logs warnings but allows execution), and adaptive (smart gate that blocks only when both probability AND confidence thresholds are exceeded). The explanations match the implementation in lines 16-25 and the evaluateBlockDecision function (lines 164-189). No file modifications were required as this was a read-only exploration task.
+            [technical-documentation-specialist] Agent successfully read guard.go and correctly identified all three GUARD modes with accurate explanations. The output matches the source code: block (GuardModeBlock) blocks tasks when prediction exceeds threshold, warn (GuardModeWarn) logs warnings but never blocks execution, and adaptive (GuardModeAdaptive) blocks only when both probability AND confidence thresholds are exceeded. The agent correctly referenced lines 16-25 where these constants are defined.
+          timestamp: "2025-12-21T14:37:54Z"
+      completed_date: "2025-12-21"
     - task_number: 3
       type: component
       name: "Configuration check"
@@ -50,4 +62,16 @@ plan:
       success_criteria:
         - "Confirms guard.enabled is true"
         - "Reports current mode setting"
-      status: "in-progress"
+      status: "completed"
+      execution_history:
+        - attempt_number: "1"
+          agent: typescript-pro
+          verdict: GREEN
+          agent_output: '{"errors":[],"files_modified":[],"output":"Configuration check completed successfully.\n\nGUARD Protocol Status:\n- enabled: true\n- mode: warn (soft signal - logs warnings but allows execution)\n- probability_threshold: 0.7\n- confidence_threshold: 0.7\n- min_history_sessions: 5\n\nThe GUARD Protocol is properly configured and enabled in .conductor/config.yaml (lines 206-229). It is set to ''warn'' mode which provides pre-wave failure prediction without blocking task execution.","status":"success","summary":"GUARD Protocol is enabled in .conductor/config.yaml with mode set to ''warn''"}'
+          qc_feedback: |-
+            [code-reviewer] Configuration check verified successfully. The .conductor/config.yaml file exists and confirms that GUARD Protocol is properly configured: guard.enabled is true (line 211) and mode is set to 'warn' (line 217). The agent output accurately reported both the enabled status and the current mode setting.
+            [devops-engineer] Configuration check completed successfully. The agent correctly read .conductor/config.yaml and verified GUARD Protocol settings: guard.enabled is true (line 211) and mode is set to 'warn' (line 217). Both success criteria are satisfied.
+            [security-auditor] Configuration check completed successfully. The .conductor/config.yaml file was verified and GUARD Protocol is properly configured at lines 206-229. guard.enabled is set to true, and mode is set to 'warn' (soft signal - logs warnings but allows execution). All success criteria have been verified.
+            [sre-engineer] Configuration check completed successfully. GUARD Protocol is confirmed enabled (guard.enabled: true) at line 211, with mode set to 'warn' at line 217. The agent correctly verified the configuration file and reported accurate settings.
+          timestamp: "2025-12-21T14:36:38Z"
+      completed_date: "2025-12-21"
