--- a/.conductor/config.yaml.example
+++ b/.conductor/config.yaml.example
@@ -279,6 +279,26 @@ guard:
   # GUARD will skip prediction if fewer sessions are available
   min_history_sessions: 5
 
+  # Predictive agent selection (v2.18+)
+  # When enabled and GUARD predicts high failure probability, automatically
+  # swaps to a better-performing agent based on historical performance data
+  auto_select_agent: true
+
+  # Real-time anomaly detection (v2.18+)
+  # Monitors wave execution for anomalies and alerts in real-time
+  anomaly_detection:
+    # Enable or disable anomaly detection (default: true when GUARD is enabled)
+    enabled: true
+
+    # Alert after N consecutive task failures (default: 3)
+    consecutive_failure_threshold: 3
+
+    # Alert when wave error rate exceeds this percentage (0.0-1.0, default: 0.5)
+    error_rate_threshold: 0.5
+
+    # Alert when task duration exceeds N times the estimate (default: 2.0)
+    duration_deviation_threshold: 2.0
+
 # GUARD Protocol Examples
 
 # Example: Enable GUARD in warn mode (recommended starting point)
@@ -301,6 +321,26 @@ guard:
 
 # Example: Disable GUARD at runtime with --no-guard flag
 # conductor run --no-guard plan.yaml
+
+# Example: Enable predictive agent selection (v2.18+)
+# guard:
+#   enabled: true
+#   auto_select_agent: true
+
+# Example: Configure anomaly detection thresholds (v2.18+)
+# guard:
+#   enabled: true
+#   anomaly_detection:
+#     enabled: true
+#     consecutive_failure_threshold: 5
+#     error_rate_threshold: 0.6
+#     duration_deviation_threshold: 3.0
+
+# Example: Disable anomaly detection while keeping GUARD enabled
+# guard:
+#   enabled: true
+#   anomaly_detection:
+#     enabled: false
 
 # Agent Watch behavioral analytics configuration (v2.7+)
 # Provides observability into Claude Code agent sessions via `conductor observe` commands
